generalise to cover COMP3120 as well as COMP2200

--- a/Github Classroom Tool.ipynb
+++ b/Github Classroom Tool.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Github Classroom Workshop Checkout Tool\n",
     "\n",
@@ -21,34 +20,12 @@
     "Once either the checkout or pull is complete, the script runs `nbconvert` on all notebook files in the repository to convert them to HTML.  It then outputs a list of links to the HTML files in the notebook below.  You can click on each link and it will be opened in a new window.   This should be quicker than opening the notebook file itself. \n",
     "\n",
     "I've included a list of all workshop names just for reference, choose your workshops from this list and update the config.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".................................................."
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<p>45487626</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45487626/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45487626/Workshop Week 1.html</a></li></ul><p>45783187</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45783187/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45783187/Workshop Week 1.html</a></li></ul><p>46463038</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46463038/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46463038/Workshop Week 1.html</a></li></ul><p>46115854</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46115854/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46115854/Workshop Week 1.html</a></li></ul><p>46991700</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46991700/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46991700/Workshop Week 1.html</a></li></ul><p>44917767 has no Github ID</p><p>46576983</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46576983/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46576983/Workshop Week 1.html</a></li></ul><p>46451412</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46451412/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46451412/Workshop Week 1.html</a></li></ul><p>46457852 has no Github ID</p><p>45381127</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45381127/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45381127/Workshop Week 1.html</a></li></ul><p>45970726</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45970726/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45970726/Workshop Week 1.html</a></li></ul><p>45942358</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/45942358/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/45942358/Workshop Week 1.html</a></li></ul><p>45152624</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/45152624/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/45152624/Workshop Week 1.html</a></li></ul><p>45941246</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/45941246/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/45941246/Workshop Week 1.html</a></li></ul><p>47120789</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/47120789/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/47120789/Workshop Week 1.html</a></li></ul><p>44509669 has no Github ID</p><p>47087498</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/47087498/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/47087498/Workshop Week 1.html</a></li></ul><p>46471316</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46471316/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46471316/Workshop Week 1.html</a></li></ul><p>46464891</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46464891/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46464891/Workshop Week 1.html</a></li></ul><p>45411476</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/45411476/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/45411476/Workshop Week 1.html</a></li></ul><p>45653240 has no Github ID</p><p>46023569</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46023569/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46023569/Workshop Week 1.html</a></li><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46023569/Workshop Week 2.html'>submissions/Workshop_1|FRI|01:00PM|C13/46023569/Workshop Week 2.html</a></li></ul><p>45813884</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45813884/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45813884/Workshop Week 1.html</a></li></ul><p>46775048</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46775048/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46775048/Workshop Week 1.html</a></li></ul><p>45697795</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/45697795/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/45697795/Workshop Week 1.html</a></li></ul><p>46462732</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46462732/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46462732/Workshop Week 1.html</a></li></ul><p>47111941</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/47111941/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/47111941/Workshop Week 1.html</a></li></ul><p>46845577</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46845577/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46845577/Workshop Week 1.html</a></li></ul><p>46346791</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46346791/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46346791/Workshop Week 1.html</a></li></ul><p>45965323 has no Github ID</p><p>46988165</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46988165/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46988165/Workshop Week 1.html</a></li></ul><p>42440610</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/42440610/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/42440610/Workshop Week 1.html</a></li></ul><p>45438412</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45438412/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45438412/Workshop Week 1.html</a></li></ul><p>44919867</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/44919867/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/44919867/Workshop Week 1.html</a></li></ul><p>45195463</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45195463/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45195463/Workshop Week 1.html</a></li></ul><p>45156417</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/45156417/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/45156417/Workshop Week 1.html</a></li></ul><p>44588089 has no Github ID</p><p>46609172 has no Github ID</p><p>46457771</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46457771/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46457771/Workshop Week 1.html</a></li></ul><p>46416358</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46416358/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46416358/Workshop Week 1.html</a></li></ul><p>45878803</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/45878803/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/45878803/Workshop Week 1.html</a></li></ul><p>45878099</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45878099/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45878099/Workshop Week 1.html</a></li></ul><p>46458980</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46458980/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46458980/Workshop Week 1.html</a></li></ul><p>45827591 has no Github ID</p><p>46233016</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46233016/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46233016/Workshop Week 1.html</a></li></ul><p>46458948 has no Github ID</p><p>45761760</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/45761760/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/45761760/Workshop Week 1.html</a></li></ul><p>46838155</p><ul><li><a target='new' href='submissions/Workshop_1|TUE|11:00AM|C01/46838155/Workshop Week 1.html'>submissions/Workshop_1|TUE|11:00AM|C01/46838155/Workshop Week 1.html</a></li></ul><p>46407448</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46407448/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46407448/Workshop Week 1.html</a></li></ul><p>46563784</p><ul><li><a target='new' href='submissions/Workshop_1|FRI|01:00PM|C13/46563784/Workshop Week 1.html'>submissions/Workshop_1|FRI|01:00PM|C13/46563784/Workshop Week 1.html</a></li></ul>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 2,
    "source": [
     "from classroom import process\n",
     "from IPython.core.display import HTML\n",
@@ -77,29 +54,148 @@
     "config = {\n",
     "    'github-roster': 'classroom_roster.csv',\n",
     "    'ilearn-csv': 'COMP2200_SHFYR_2021_ALL_Uwith COMP6200 Co-badged Grades-20210731_0912-comma_separated.csv',\n",
+    "    \"github-id-pattern\": \"\\\\d+\",\n",
+    "    \"key-field\": \"id\",\n",
     "    'classroom': \"git@github.com:MQCOMP2200-S2-2021\",\n",
     "    'assignment': \"practical-week-1\",\n",
-    "    'outdir': 'submissions',\n",
-    "    'workshops': ['Workshop_1|FRI|01:00PM|C13', 'Workshop_1|TUE|11:00AM|C01']\n",
+    "    'outdir': 'submissions-2200',\n",
+    "    'workshops': ['Workshop_1|FRI|01:00PM|C13'],\n",
+    "    'nbconvert': True,\n",
+    "    'report': False\n",
     "}\n",
     "\n",
     "\n",
     "HTML(process(config))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Workshop_1|TUE|01:00PM|C02', 'Workshop_1|TUE|11:00AM|C01', 'Workshop_1|THU|09:00AM|C06', 'Workshop_1|FRI|01:00PM|C13', 'Workshop_1|FRI|11:00AM|C12', 'Workshop_1|THU|01:00PM|C08', 'Workshop_1|FRI|03:00PM|C14', 'Workshop_1|WED|01:00PM|C03', 'Workshop_1|TUE|06:00PM|C01', 'Workshop_1|TUE|09:00AM|C17', 'Workshop_1|THU|05:00PM|C10', 'Workshop_1|MON|06:00PM|C16', 'Workshop_1|THU|11:00AM|C07', 'Workshop_1|WED|05:00PM|C05', 'Workshop_1|TUE|06:00PM|C04', 'Workshop_1|MON|04:00PM|C15', 'Workshop_1|FRI|09:00AM|C11']\n",
+      "Extra names in Github Classroom roster\n",
+      "44478925\n",
+      "111111\n",
+      "46348492\n",
+      "46171886\n",
+      "47156910\n",
+      "45875758\n",
+      "46576746\n",
+      "46123601\n",
+      "47162015\n",
+      "45280223\n",
+      "47082496\n",
+      "46386106\n",
+      "46366784\n",
+      "46981101\n",
+      "46599851\n",
+      "46570306\n",
+      "45239231\n",
+      "45782334\n",
+      "45111650\n",
+      "46182608\n",
+      "\n",
+      "Students not in Github Classroom Roster\n",
+      "Add these to the roster to associate with student github accounts\n",
+      "thuseevan.nareshkumar@students.mq.edu.au\n",
+      "tran-chau-ngoc.tran-chau-ng@students.mq.edu.au\n",
+      "erik.horvath@students.mq.edu.au\n",
+      "md-fareeg-hasan.faisal@students.mq.edu.au\n",
+      "muhammad-mustafa-nadeem.kha@students.mq.edu.au\n",
+      "gleb.kovalev@students.mq.edu.au\n",
+      "muhammad.khan4@students.mq.edu.au\n",
+      "zoljargal.byambadorj@students.mq.edu.au\n",
+      "ziheng.liu1@students.mq.edu.au\n",
+      "arjun.kaul@students.mq.edu.au\n",
+      "jiuding.liu@students.mq.edu.au\n",
+      "supriya.baweja@students.mq.edu.au\n",
+      "matthew.westerlund@students.mq.edu.au\n",
+      "blake.goss@students.mq.edu.au\n",
+      "deepesh.khanal@students.mq.edu.au\n",
+      "nicholas.palmer3@students.mq.edu.au\n",
+      "\n",
+      "These students have no github account yet\n",
+      "shaun.buss@students.mq.edu.au\n",
+      "carlo.fares@students.mq.edu.au\n",
+      "ryan.lam1@students.mq.edu.au\n",
+      "reddhishri.chakma@students.mq.edu.au\n",
+      "marcus.fernandez1@students.mq.edu.au\n",
+      "wenkang.guo@students.mq.edu.au\n",
+      "benjamin.mackie@students.mq.edu.au\n",
+      "yunfei.xiao@students.mq.edu.au\n",
+      "raisa.mostafa@students.mq.edu.au\n",
+      "tahsin.hossain@students.mq.edu.au\n",
+      "henda.guo@students.mq.edu.au\n",
+      "simon.attalla@students.mq.edu.au\n",
+      "adam.thomas3@students.mq.edu.au\n",
+      "charishma.ummadisetti@students.mq.edu.au\n",
+      "claire.eyaru@students.mq.edu.au\n",
+      "mehak.shekhawat@students.mq.edu.au\n",
+      "krispaulbabu.krispaulbabu@students.mq.edu.au\n",
+      "zawaar.shah@students.mq.edu.au\n",
+      "nenor.oshana@students.mq.edu.au\n",
+      "diviya.raman@students.mq.edu.au\n",
+      "liam.gornall@students.mq.edu.au\n",
+      "thomas.haes@students.mq.edu.au\n",
+      "mohammed-fardeen.mohammed-f@students.mq.edu.au\n",
+      "ruobing.wang1@students.mq.edu.au\n",
+      "yonathan.ferdman@students.mq.edu.au\n",
+      "tom.buckley@students.mq.edu.au\n",
+      "fangzhou.liu@students.mq.edu.au\n",
+      "joshua.falanga@students.mq.edu.au\n",
+      "muammer.eyvaz@students.mq.edu.au\n",
+      "aarushi.chaudhary@students.mq.edu.au\n",
+      "luca.wormald@students.mq.edu.au\n",
+      "farjana.setu@students.mq.edu.au\n",
+      "anton.zhang@students.mq.edu.au\n",
+      "kiran.kumar@students.mq.edu.au\n",
+      "shafeen.sharif@students.mq.edu.au\n",
+      "srijan.nayyar@students.mq.edu.au\n",
+      "chhade.alasbar@students.mq.edu.au\n",
+      "prachi.prachi@students.mq.edu.au\n",
+      "natalie.chhai@students.mq.edu.au\n",
+      "jordan.batten@students.mq.edu.au\n",
+      "raj.singh@students.mq.edu.au\n",
+      "najibullah.rezai@students.mq.edu.au\n",
+      "alexandra.ellison@students.mq.edu.au\n",
+      "bhumik-birenkumar.shah@students.mq.edu.au\n",
+      "michael.szczerba@students.mq.edu.au\n",
+      "mikhail.pavlov@students.mq.edu.au\n",
+      "bailey.paton@students.mq.edu.au\n",
+      "hannah.arain@students.mq.edu.au\n",
+      "dylan.lay@students.mq.edu.au\n",
+      "sabir.khagi@students.mq.edu.au\n",
+      "nicki.daghighi@students.mq.edu.au\n",
+      "antas.sareen@students.mq.edu.au\n",
+      "nathan.lewis1@students.mq.edu.au\n",
+      "allan-kudzai.mawande@students.mq.edu.au\n",
+      "juan.cerillo@students.mq.edu.au\n",
+      "lachlan.woodhill@students.mq.edu.au\n",
+      "ishtiyaq.khan@students.mq.edu.au\n",
+      "anna.le6@students.mq.edu.au\n",
+      "he.bai1@students.mq.edu.au\n",
+      "harry.pham1@students.mq.edu.au\n",
+      "richard.tran2@students.mq.edu.au\n",
+      "lovepreet.sahota@students.mq.edu.au\n",
+      "aditya.deshpande@students.mq.edu.au\n",
+      "...................."
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -112,6 +208,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "interpreter": {
+   "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
   }
  },
  "nbformat": 4,
