Update notes in notebook

--- a/Github Classroom Tool.ipynb
+++ b/Github Classroom Tool.ipynb
@@ -52,10 +52,15 @@
     "\n",
     "\n",
     "# update config as needed\n",
+    "# eg. for portfolio, set \n",
+    "# \"assignment\": \"portfolio\"\n",
+    "# \"github-repos-csv\": \"mqcomp2200-portfolio-repos.csv\"\n",
+    "# \"outdir\": \"portfolio-2200\"\n",
+    "# suggest you make a copy of this notebook for each of the assignments\n",
     "config = {\n",
     "    'github-roster': 'classroom_roster_COMP2200.csv',\n",
     "    'ilearn-csv': 'COMP2200_SHFYR_2021_ALL_Uwith COMP6200 Co-badged Grades-20210812_0150-comma_separated.csv',\n",
-    "    'github-repos-csv': 'mqcomp2200-repos.csv',\n",
+    "    'github-repos-csv': 'mqcomp2200-weekly-repos.csv',\n",
     "    \"github-id-pattern\": \"\\\\d+\",\n",
     "    \"key-field\": \"id\",\n",
     "    'organisation': \"MQCOMP2200-S2-2021\",\n",
@@ -64,8 +69,7 @@
     "    'workshops': ['Workshop_1|THU|05:00PM|C10'],\n",
     "    'nbconvert': True,\n",
     "    'report': False\n",
-    "}\n",
-    "\n"
+    "}"
    ],
    "outputs": [],
    "metadata": {}
